# concord-bft

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .travis.yml  1_utt-demo-build.sh  2_utt-demo-build-wallet-image.sh  3_utt-demo-build-payment-service-image.sh  3_utt-demo-start.sh  4_utt-demo-start-replicas.sh  5_utt-demo-start-client.sh  6_utt-demo-login-wallet.sh  7_utt-demo-reset.sh  CMakeGraphVizOptions.cmake  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.utt.run  DockerfileDebug  DockerfileToolchain  LICENSE  Makefile  PreReqs  README-UTT.md  README.md  b.sh  build-utt-client-docker-image.sh  build-utt-demo.sh  build-utt-replica-docker-image.sh  cmake-build-options.sh  commitlint.config.js  conanfile.py  conanfile.txt  docker-compose-utt-demo.yml  docker-compose.yml  (+12 more)
bftclient/: CMakeLists.txt
bftclient/src/: bft_client.cpp  matcher.cpp  matcher.h  msg_receiver.cpp  msg_receiver.h  quorums.cpp
bftclient/test/: CMakeLists.txt  bft_client_api_tests.cpp  bft_client_test.cpp
bftengine/: CMakeLists.txt
bftengine/cmf/: CMakeLists.txt  db_checkpoint.cmf  db_checkpoint_msg.cmf  execution_data.cmf  keys_and_signatures.cmf
bftengine/tests/: CMakeLists.txt  README.md
ccron/: CMakeLists.txt  README.md
ccron/cmf/: CMakeLists.txt  ccron_msgs.cmf
ccron/src/: cron_table.cpp  periodic_action.cpp  ticks_generator.cpp
ccron/test/: CMakeLists.txt  ccron_table_test.cpp  ccron_ticks_generator_test.cpp
client/: CMakeLists.txt  README.md
client/bftclient/: CMakeLists.txt
client/client_pool/: CMakeLists.txt
client/clientservice/: CMakeLists.txt
client/concordclient/: CMakeLists.txt
client/cre/: CMakeLists.txt
client/proto/: CMakeLists.txt
client/reconfiguration/: CMakeLists.txt
client/thin-replica-client/: CMakeLists.txt
communication/: CMakeLists.txt
communication/src/: AsyncTlsConnection.cpp  AsyncTlsConnection.h  CommFactory.cpp  PlainTcpCommunication.cpp  PlainUDPCommunication.cpp  TlsConnMgr.cpp  TlsConnMgr.h  TlsConnectionManager.cpp  TlsConnectionManager.h  TlsDiagnostics.h  TlsMultiplexCommunication.cpp  TlsRunner.cpp  TlsRunner.h  TlsTCPCommunication.cpp  TlsTcpImpl.cpp  TlsTcpImpl.h  TlsWriteQueue.h
communication/tests/: CMakeLists.txt  multiplex_comm_test.cpp
diagnostics/: CMakeLists.txt  README.md  concord-ctl  concord_ctl_logic.py
diagnostics/include/: diagnostics.h  diagnostics_server.h  performance_handler.h  protocol.h  status_handlers.h
diagnostics/src/: performance_handler.cpp  status_handlers.cpp
diagnostics/test/: CMakeLists.txt  diagnostics_tests.cpp  histogram_tests.cpp  main.cpp
examples/: CMakeLists.txt  README.md  common.hpp
examples/client/: CMakeLists.txt  main.cpp
examples/kv-cmf/: CMakeLists.txt  kv_replica_msgs.cmf
examples/msg-configs/: msg-1
examples/replica/: .gitignore  CMakeLists.txt  main.cpp
examples/scripts/: replica_conf  test_osexample.py.in  test_osexample.sh
kvbc/: CMakeLists.txt
kvbc/benchmark/: CMakeLists.txt  categorization_benchmark.cpp  sparse_merkle_benchmark.cpp
kvbc/cmf/: CMakeLists.txt  categorized_kvbc_msgs.cmf  event_group_msgs.cmf  pruning_msgs.cmf
kvbc/include/: ClientImp.h  KVBCInterfaces.h  Replica.h  ReplicaImp.h  base_db_adapter.h  block.h  block_digest.h  block_header.hpp  block_metadata.hpp  blockchain_misc.hpp  blockchain_type.hpp  blockchain_view.h  concurrent_pruning_manager.hpp  db_adapter.h  db_adapter_interface.h  db_checkpoint.h  db_interfaces.h  direct_kv_block.h  direct_kv_db_adapter.h  direct_kv_storage_factory.h  kv_types.hpp  kvbc_key_types.hpp  merkle_tree_block.h  merkle_tree_db_adapter.h  merkle_tree_key_manipulator.h  merkle_tree_serialization.h  merkle_tree_storage_factory.h  metadata_block_id.h  newest_public_event_group_record_time.h  persist_last_block_id_in_mtd.h  pruning_handler.hpp  pruning_reserved_pages_client.hpp  reconfiguration_add_block_handler.hpp  reconfiguration_kvbc_handler.hpp  replica_resources.h  replica_state_sync.h  replica_state_sync_imp.hpp  ror_app_state.hpp  st_reconfiguraion_sm.hpp  state_snapshot_interface.hpp  (+1 more)
kvbc/proto/: CMakeLists.txt  concord_kvbc.proto
kvbc/src/: ClientImp.cpp  Replica.cpp  ReplicaImp.cpp  base_db_adapter.cpp  block_header.cpp  block_metadata.cpp  blockchain_misc.cpp  db_checkpoint.cpp  db_checkpoint.h  direct_kv_block.cpp  direct_kv_db_adapter.cpp  direct_kv_storage_factory.cpp  merkle_tree_block.cpp  merkle_tree_db_adapter.cpp  merkle_tree_key_manipulator.cpp  merkle_tree_storage_factory.cpp  pruning_handler.cpp  pruning_reserved_pages_client.cpp  reconfiguration_add_block_handler.cpp  reconfiguration_kvbc_handler.cpp  replica_resources.cpp  replica_state_sync_imp.cpp  ror_app_state.cpp  st_reconfiguration_sm.cpp
kvbc/test/: CMakeLists.txt  blockchain_view_test.cpp  kvbc_dbadapter_test.cpp  multiIO_test.cpp  order_test.cpp  pruning_reserved_pages_client_test.cpp  pruning_test.cpp  replica_resources_test.cpp  replica_state_sync_test.cpp  ror_app_state_test.cpp  s3_storage_factory_test.cpp
kvbc/tools/: CMakeLists.txt
logging/: CMakeLists.txt  FindLog4cplus.cmake
logging/include/: Logger.hpp  Logging.hpp  Logging4cplus.hpp  LoggingSpd.hpp
logging/src/: Logger.cpp  (+3 more)
orrery/: CMakeLists.txt  README.md
reconfiguration/: CMakeLists.txt
resources-manager/: CMakeLists.txt
secretretriever/: CMakeLists.txt
secretsmanager/: CMakeLists.txt
storage/: CMakeLists.txt  README.md  database_interface.h
tests/: CMakeLists.txt  README.md  test_skvbc.py  test_skvbc_auto_view_change.py  test_skvbc_chaos.py  test_skvbc_fast_path.py  test_skvbc_linearizability.py  test_skvbc_persistence.py  test_skvbc_slow_path.py  test_skvbc_view_change.py
thin-replica-server/: CMakeLists.txt
threshsign/: .gitignore  CMakeLists.txt  README.md
tools/: CMakeLists.txt  DBEditor.cpp  GenerateConcordKeys.cpp  KeyfileIOUtils.cpp  KeyfileIOUtils.hpp  README.md  TestGeneratedKeys.cpp  run-clang-tidy.py  testKeyGeneration.sh
util/: CMakeLists.txt
utt/: CMakeLists.txt  LICENSE  README.md  dependencies.cmake  rename-library.sh
(+2637 files in other folders)
